@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Apr 19 19:55:04 CEST 2006
+// Tue Aug 15 03:29:29 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -130,7 +130,7 @@ namespace Mono.Cecil {
 
 		public void CopyTo (Array ary, int index)
 		{
-			(this as ICollection).CopyTo (ary, index);
+			this.BaseGetAllValues ().CopyTo (ary, index);
 		}
 
 		public new IEnumerator GetEnumerator ()
